Fix layout issues when fewer cards are shown

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,10 @@
 body {
   color: #444444;
-  height: 100%;
+  height: 100vh;
   margin: 1em 2em;
   font-family: Arial, Helvetica, sans-serif;
   display: grid;
-  grid-template-rows: 1fr auto 0.5fr;
+  grid-template-rows: 1fr auto 1fr;
   grid-template-areas:
     "header"
     "main"
@@ -16,7 +16,7 @@ header {
 }
 
 footer {
-  padding-top: 2em;
+  padding: 2em 0;
   grid-area: footer;
   text-align: center;
   font-size: 0.9em;
